# yt-dlp-NitterRedirect

./: README.md  pyproject.toml  setup.cfg
yt_dlp_plugins/extractor/: nitterredirect.py
